[package]
name = "email-cli-lightjunction"
version = "0.1.0"
edition = "2024"
authors = ["email-cli contributors"]
description = "A small email CLI with Gmail OAuth first-class support and generic IMAP/SMTP accounts."
license = "MIT OR Apache-2.0"
repository = "https://github.com/LIghtJUNction/email-cli"
readme = "README.md"
keywords = ["email", "gmail", "imap", "smtp", "cli"]
categories = ["command-line-utilities", "email"]

[[bin]]
name = "email"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
imap = "2.4"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "native-tls"] }
mailparse = "0.16"
native-tls = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
url = "2.5"
webbrowser = "1.0"
